# rust-vs-python-rag-benchmark

./: .gitignore  README.md  README_SUM.md  benchmark_config.toml  download_parquet.py  embedding_server.py  preflight_check.ps1  pyproject.toml  query_set_debug.json  requirements.in  requirements.txt  run_benchmark.ps1  run_benchmark.sh  run_full_benchmark.ps1  run_full_benchmark.sh  setup.ps1  setup.sh
output_debug/: llama_cpp_microbench_python.json  llama_cpp_microbench_rust_conservative.json  llama_cpp_microbench_rust_nonconservative.json  metrics_python_llama_cpp.jsonl  metrics_rust_llama_cpp.jsonl
python_pipeline/: config.py  dataset_loader.py  embedder.py  llm_client_llama_cpp.py  logger.py  metrics_collector.py  pipeline.py  stress_runner.py
report/: generate_all_scenarios_report.py  generate_report.py
results/: benchmark_report_all_scenarios.md  benchmark_report_llama_cpp.md  benchmark_report_llm_rs.md  benchmark_report_ollama_http.md
rust_pipeline/: Cargo.toml
rust_pipeline/proptest-regressions/: llm_client.txt  logger.txt
rust_pipeline/src/: config.rs  embedder.rs  llm_client.rs  llm_client_llama_cpp.rs  llm_client_llm_rs.rs  logger.rs  main.rs  metrics_collector.rs  stress_runner.rs
scripts/: llama_cpp_microbench.py
tests/: test_chunker.py  test_config.py  test_dataset_loader.py  test_embedder.py  test_llm_backend_selection.py  test_llm_client.py  test_logger_properties.py  test_metrics_collector.py  test_ollama_preflight.py  test_output_filenames.py  test_report_generator.py  test_retriever.py  test_static_artifacts.py  test_stress_runner.py
