[package]
name = "rust_pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_pipeline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
toml = "0.8"
thiserror = "1"
hf-hub = "0.3"
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
bytes = "1"
text-splitter = { version = "0.29", features = ["tokenizers"] }
tokenizers = { version = "0.22", default-features = false, features = ["http"] }
fastembed = { version = "4", optional = true }
instant-distance = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
ureq = { version = "2", default-features = false }

[dev-dependencies]
proptest = "1"
tempfile = "3"
