[package]
name = "rust_pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_pipeline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
toml = "0.8"
thiserror = "1"
hf-hub = "0.3"
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
bytes = "1"
text-splitter = { version = "0.29", features = ["tokenizers"] }
tokenizers = { version = "0.22", default-features = false, features = ["http"] }
# ort removed — embedder uses candle BertModel (pure Rust, no ORT DLL needed)
instant-distance = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
candle-core = { version = "0.8", features = [] }
candle-transformers = { version = "0.8" }
candle-nn = { version = "0.8" }
# llama_cpp = "0.3"  — DISABLED: requires libclang (LLVM).
# To enable: winget install --id LLVM.LLVM -e, restart shell, then
# uncomment and rebuild with: cargo build --release --features llama_cpp_backend
# llama_cpp = { version = "0.3", optional = true }
rayon = "1"
sysinfo = "0.31"
dirs-next = "2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
# Enable the llama_cpp in-process backend (requires libclang / LLVM installed).
# Install: winget install --id LLVM.LLVM -e
# Then rebuild: cargo build --release --features llama_cpp_backend
llama_cpp_backend = []
